# BuildPythonPackage

./: README.md  changelog.md  linter.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
package_name/: __main__.py
package_name/modules_name/: hello.py
pkgtest/: __main__.py
tests/: test_hello.py
